--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,5 +61,5 @@ dependencies {
     implementation 'eason.linyuzai:eason-download:1.0.1'
     // 下载如有需要可以添加额外的监听器
     implementation 'eason.linyuzai:eason-download-listeners:1.0.1'
-
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
